News UAT/force-app/main/default/objects/Revenue_Schedule__c/Revenue_Schedule__c.object-meta.xml
<CustomObject>
    <description>Copy of the standard revenue schedule object off opportunity line items.
This is to allow customised reporting with specific filters for News Corp</description>
    <label>Revenue Schedule</label>
    <nameField>
        <displayFormat>RVS{00000000}</displayFormat>
        <label>Rev Sch #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>