News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Schedules Account Linked</relationshipLabel>
    <relationshipName>Revenue_Schedules_AccountLinked</relationshipName>
    <type>Lookup</type>
</CustomField>