News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Awaiting_Booking_Core__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Booking_Core__c</fullName>
    <formula>IF(
 Rev_Group__c = &#39;Awaiting Booking -Core$&#39;,
 Rev_Amount__c,
 0
)</formula>
    <label>Awaiting Booking -Core$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>