News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <formula>IF(
 Rev_Group__c = &#39;Booked$&#39;,
 Rev_Amount__c,
 0
)</formula>
    <label>Booked$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>