News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <formula>Opportunity__r.Campaign_Start_Date__c</formula>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>