News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>TEXT(Opportunity__r.Classification__c)</formula>
    <label>Classification</label>
    <type>Text</type>
</CustomField>