News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Closed_Opty__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opty__c</fullName>
    <formula>IF(
 Rev_Group__c = &#39;Closed Opty$&#39;,
 Rev_Amount__c,
 0
)</formula>
    <label>Closed Opty$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>