News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Count_Sales_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Count_Sales_Order_Line_Item__c</fullName>
    <formula>Opportunity__r.Count_Sales_Order_Line_Item__c</formula>
    <label>Count: Sales Order Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>