News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used for data loading purposes of targets</inlineHelpText>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>