News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/isTest__c.field-meta.xml
<CustomField>
    <fullName>isTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field for testing purpose only, i will remove it later</description>
    <label>isTest</label>
    <type>Checkbox</type>
</CustomField>