News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Line_Item_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Schedule_Id__c</fullName>
    <label>Line Item Schedule Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>