News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Schedules Linked</relationshipLabel>
    <relationshipName>Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>