News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>