News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Opty_IsWon__c.field-meta.xml
<CustomField>
    <fullName>Opty_IsWon__c</fullName>
    <formula>Opportunity__r.IsWon</formula>
    <label>Opty IsWon</label>
    <type>Checkbox</type>
</CustomField>