News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Revenue Schedules Product</relationshipLabel>
    <relationshipName>Revenue_Schedules_Product</relationshipName>
    <type>Lookup</type>
</CustomField>