News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Reporting_Type_L1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type_L1__c</fullName>
    <description>Field is used for reporting to filter target vs forecast
Another field Type L2 is used to filter forecast to - booked vs pipeline.</description>
    <label>Reporting Type L1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
                <default>true</default>
                <label>Forecast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>