News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Reporting_Type_L2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type_L2__c</fullName>
    <formula>IF(CONTAINS(Product__r.Name, &quot;Target Digital&quot;),
  &quot;Target Digital&quot;,

  IF(CONTAINS(Product__r.Name, &quot;Target Print&quot;),
    &quot;Target Print&quot;,

    IF(CONTAINS(Product__r.Name, &quot;Target Magazine&quot;),
      &quot;Target Magazine&quot;,

      IF(CONTAINS(Product__r.Name, &quot;Walk-In&quot;),
      &quot;Pipeline&quot;,

        IF(Count_Sales_Order_Line_Item__c &gt;=1, &quot;Booked&quot;, &quot;Pipeline&quot;)
      )
    )
  )
)

/* Field is replicated from Opty Line */</formula>
    <inlineHelpText>Filter forecast to - booked vs pipeline.</inlineHelpText>
    <label>Reporting Type L2</label>
    <type>Text</type>
</CustomField>