News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Rev_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rev_Amount__c</fullName>
    <label>Rev Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>