News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Rev_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Date__c</fullName>
    <label>Rev Date</label>
    <type>Date</type>
</CustomField>