News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Revenue_Group_L1__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group_L1__c</fullName>
    <formula>TEXT(Opportunity__r.Revenue_Group__c)</formula>
    <label>Revenue Group L1</label>
    <type>Text</type>
</CustomField>