News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Revenue_Group_L2__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group_L2__c</fullName>
    <formula>(Opportunity__r.Revenue_Group_L1__c)</formula>
    <label>Revenue Group L2</label>
    <type>Text</type>
</CustomField>