News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Revenue Schedules Sales Order</relationshipLabel>
    <relationshipName>Revenue_Schedules_Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>