News UAT/force-app/main/default/objects/Revenue_Schedule__c/fields/Weighted_Pipeline_50__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline_50__c</fullName>
    <description>NB: This is not a weighted pipeline. This is the sum of the pipeline based on a certain probability/ stage.</description>
    <formula>IF(
 Rev_Group__c = &#39;Weighted Pipeline (50%+)$&#39;,
 Rev_Amount__c,
 0
)</formula>
    <label>Pipeline (50-89%)$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>