News UAT/force-app/main/default/objects/Revenue_Schedule__c/listViews/My_Revenue_Schedules.listView-meta.xml
<ListView>
    <fullName>My_Revenue_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Reporting_Type_L1__c</columns>
    <columns>Rev_Amount__c</columns>
    <columns>Rev_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Rev_Group__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Revenue Schedules</label>
</ListView>